--- a/Seminar_03/MyFirstWebApp/src/main/resources/static/home.html
+++ b/Seminar_03/MyFirstWebApp/src/main/resources/static/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        Welcome! It's my home page.
+        Welcome! It's my home page. It's home.html
     </h1>
 </body>
 </html>
