Seminar_04 HomeWork continue

--- a/Seminar_04/Homework/src/main/resources/static/aboutcompany.html
+++ b/Seminar_04/Homework/src/main/resources/static/aboutcompany.html
@@ -56,7 +56,14 @@
     </div>
     <div class="p-2" style="width: 900px;">
         <div class="d-flex flex-column p-3 text-bg-light w-auto">
-
+                    <h1>ИП Савельев</h1>
+                    <p>Я пока только учусь на разработчика, но могу вам помочь в области сетей передачи данных, WiFi, видеонаблюдения, построения ИТ инфраструктуры. Так-же в моей команде есть инженеры различных направления и проектировщики СКС и электроснабжения.</p>
+                    <h2>Наша команда:</h2>
+                    <ul>
+                        <li>Денис Савельев - Ведущий инженер, руководитель проектов</li>
+                        <li>Кирилл Сукач - проектировщик, руководитель проектов</li>
+                        <li>Дмитрий Милов - Ведущий инженер</li>
+                    </ul>
         </div>
     </div>
 </main>
