--- a/Seminar_04/Homework/src/main/resources/static/index.html
+++ b/Seminar_04/Homework/src/main/resources/static/index.html
@@ -1,58 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
-
-    <link href="styles/styles.css" rel="stylesheet">
+    <link href="../templates/styles/styles.css" rel="stylesheet">
     <title>Welcome</title>
 </head>
 <body>
 <main class="d-flex flex-row mb-3">
     <div class="p-2" style="width: 420px;">
-        <div class="d-flex flex-column p-3 text-bg-dark w-auto" id="navmenu">
-            <a href="/index.html"
-               class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <span class="fs-4">Добро пожаловать на мой сайт!</span>
-            </a>
-            <div class="d-flex flex-column justify-content-center">
-                <p class="text-start">Вы можете выбрать интересные темы</p>
-            </div>
-            <hr>
-            <div class="d-grid gap-2">
-                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#home-collapse">
-                    Мои данные
-                </button>
-                <div class="collapse" id="home-collapse">
-                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                        <a class="btn btn-dark" href="aboutme.html" role="button">Обо мне</a>
-                    </div>
-                </div>
-                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#work-collapse">
-                    Работа
-                </button>
-                <div class="collapse" id="work-collapse">
-                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                        <a class="btn btn-dark" href="./aboutcompany.html" role="button">ИП Савельев</a>
-                    </div>
-                </div>
-                <button type="button" class="btn btn-primary" data-bs-toggle="collapse"
-                        data-bs-target="#notes-collapse">
-                    Профессиональные заметки
-                </button>
-                <div class="collapse" id="notes-collapse">
-                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
-                        <a class="btn btn-dark" href="switches.html" role="button">Коммутаторы</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
     <div class="p-2" style="width: 900px;">
         <div class="d-flex flex-column p-3 text-bg-light w-auto">
@@ -61,20 +17,7 @@
     </div>
 </main>
 <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted">© 2024 Russia</p>
 
-        <a href="/"
-           class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-        </a>
-        <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="mailto:savelev.denis.it@gmail.com" class="nav-link px-2 text-muted">Contact
-                me</a></li>
-        </ul>
-    </footer>
 </div>
 </body>
 </html>
